# libfipc

./: .gitignore  Makefile.am  autogen.sh  betaModule.c  betaModule.h  configure.ac
IPC/: IPC.c  ipc.c  ipc.h
benchit/: bienvhash.c
benchit/LOCALDEFS/: node0
benchit/gui/cfg/: BGUI.cfg
benchit/jbi/: BIEnvHash.java
benchit/tools/: bitWriter.c  envhashbuilder  fileversion  tmp.env
benchit/tools/hw_detect/: cpuinfo  x86.c
current/IPC/: ipc.c  ipc.h
current/awe-mapper/: awe-mapper.c
current/ring-chan/: ring-channel.c  ring-channel.h
current/tests/dispatch-loop/: Makefile  async_tester.c  ipc_dispatch.c  ipc_dispatch.h  thread1_fn1.c  thread2_fn1.c  thread3_fn1.c  thread_fn_util.h
current/tests/rpc/: Makefile  Module.symvers  callee.c  caller.c  modules.order  res  rpc.h  rpc_setup.c  rpc_test.c  rpc_testing.mod.c  sorted
current/tests/timing/: Module.symvers  modules.order  out1  timing.mod.c  timing_setup.c
include/: libfipc.h  libfipc_internal.h  libfipc_types.h
include/kernel/: libfipc_platform_internal.h  libfipc_platform_types.h
kernel/: Makefile  betaModule.c  betaModule.c~  betaModule.h
kernel/2/: Makefile  betaModule2.c
kernel/ring-chan/: ring-channel.c  ring-channel.h
kernel_rpc/: Makefile  betaModule.h  betaModule_RPC.c  functions.c  num_configs.h
kernel_rpc/2/: Makefile  betaModule_RPC2.c  functions.c
kernel_rpc/2/ring-chan/: ring-channel.h
kernel_rpc/ring-chan/: ring-channel.h
old/kernel/: betaModule.c  betaModule1.mod.c  modules.order
old/kernel/.tmp_versions/: betaModule1.mod
old/kernel/2/: modules.order  test.mod.c
old/userland/: a.out
old/userland/cost-of-synch/: config.h  master.cpp  mymaster_cachepoll10.c  slave.cpp  slave_fromkland.c
old1/kernel/2/: Makefile
old1/userland/: unload.sh
old1/userland/cost-of-synch/: master_fromkland_same_line.c  mymaster_nextcachepoll.c  myslave_cachepoll.c  results  results-sorted  results_from_kland  results_sorted
old2/IPC/: ipc.c  ipc.h
old2/ring-chan/: ring-channel.h
old2/tests/dispatch-loop/: Makefile  ipc_dispatch.c  thread1_fn1.c  thread2_fn1.c  thread3_fn1.c  thread_fn_util.h
old2/tests/rpc/: callee.c  caller.c  rpc.h  rpc_test.c  sorted6
old2/tests/timing/: Makefile  timing_setup.c
old3/current/IPC/: ipc.c  ipc.h
old3/current/ring-chan/: ring-channel.h
old3/old/kernel/: Makefile  betaModule.h
ring-chan/: ring-channel.c  ring-channel.h
src/: Makefile.am  ipc.c
src/common/: ipc.c  ipc_one-slot.c
src/include/: Makefile.am  ipc.h  libfipc.h  libfipc_internal.h  libfipc_types.h  ring_channel.h
src/platform/: Makefile.am
src/platform/kernel/: Kbuild.in  Makefile.am
src/platform/userland/: Makefile
tests/kernel/: Experiment1.sh  Experiment5.sh  libfipc_test.h  libfipc_test_stat.h  libfipc_test_thread.h  libfipc_test_time.h  tests.txt
tests/kernel/cc_load_M/: main.c  test.h
tests/kernel/cc_load_M_prefetch/: Readme.md  main.c  test.h
tests/kernel/cc_prefetch/: main.c  test.h
tests/kernel/cc_prefetchw/: main.c  test.h
tests/kernel/channel_group/: main.c  queue.c  queue.h  test.h
tests/kernel/empty_msg/: callee.c  caller.c
tests/kernel/perf_bare_1/: main.c  test.h
tests/kernel/perf_bare_1_reg/: main.c  test.h
tests/kernel/perf_bare_1_reset/: main.c  test.h
tests/kernel/perf_bare_1_seq/: main.c  test.h
tests/kernel/perf_bare_2/: main.c  test.h
tests/kernel/perf_bare_2_reg/: main.c  test.h
tests/kernel/perf_bare_2_seq/: main.c  test.h
tests/kernel/perf_bare_fipc/: Experiment1.sh  main.c  test.h
tests/kernel/perf_bare_fipc_w/: main.c  test.h
tests/kernel/perf_bare_fipc_write/: Makefile  main.c
tests/kernel/perf_cc_load_M/: main.c  test.h
tests/kernel/perf_counters/: log.txt  main.c  perf_counter_helper.h  test.h  test1.sh
tests/kernel/perf_rpc/: main.c  test.h
tests/kernel/ping_pong/: Makefile  main.c  test.h
tests/kernel/ping_pong_bare_1/: main.c  test.h
tests/kernel/ping_pong_bare_1_reg/: main.c  test.h
tests/kernel/ping_pong_bare_1_seq/: main.c  test.h
tests/kernel/ping_pong_bare_1_seq_reset/: main.c  test.h
tests/kernel/ping_pong_bare_2/: Readme.md  main.c  test.h
tests/kernel/ping_pong_bare_2_reg/: main.c  test.h
tests/kernel/ping_pong_bare_2_seq/: main.c  test.h
tests/kernel/ping_pong_bare_2_wbr/: main.c  test.h
tests/kernel/ping_pong_bare_fipc/: main.c  test.h
tests/kernel/ping_pong_multi_fipc/: main.c  test.h
tests/kernel/point_to_point/: main.c
tests/kernel/queue/: Makefile  main.c  queue.c  queue.h  test.h
tests/kernel/queue_fipc/: main.c  queue.c  queue.h  test.h
tests/kernel/queue_lockfree/: main.c  queue.c  queue.h
tests/kernel/queue_lockless/: main.c  queue.c  queue.h
tests/kernel/queue_mpmc_mscott/: queue.h  test.h
tests/kernel/queue_mpmc_qspinlock/: queue.c  test.h
tests/kernel/queue_spinlock/: main.c  queue.c  queue.h  test.h
tests/kernel/queue_spsc_bqueue/: main.c  queue.c  queue.h  test.h
tests/kernel/queue_spsc_fipc/: main.c  queue.c  queue.h  test.h
tests/kernel/queue_spsc_fipc_lat/: main.c  queue.c  queue.h  test.h
tests/kernel/queue_spsc_mscott/: Makefile  main.c  queue.c  queue.h  test.h
tests/kernel/queue_spsc_mscott_lat/: main.c  queue.c  queue.h  test.h
tests/kernel/rpc/: Makefile  main.c  test.h
tests/rpc/: Makefile  callee.c  caller.c  rpc.h  rpc_setup.c  rpc_test.c
tests/timing/: Makefile  timing_setup.c~
tests/userland/: README.txt  libfipc_numa.c  libfipc_numa.h  libfipc_test.h  libfipc_test_shm.h  libfipc_test_stat.h  libfipc_test_thread.h  libfipc_test_time.h
tests/userland/IS_queue_spinlock/: atomic_ops.h  main.c  platform_defs.h  queue.c  queue.h  spinlock.c  spinlock.h  test.h  util.h
tests/userland/Long_Msg/: Makefile  main.c  test.h
tests/userland/NFV/: Makefile  main.c
tests/userland/cc_load_M/: cc_load_M  main.c  test.h
tests/userland/exp_script/: README.md  exp.cfg.json  exp.py  parsing.py
userland/: ubetaDriver.c  ubetaDriver.c~  uland  unload.sh
userland/cost-of-synch/: Makefile  mymaster_cachepoll.c  myslave_cachepoll_ONEWAY.c  myslave_nextcachepoll.c  slave_fromkland_same_line.c  timesclflush.txt
(+7434 files in other folders)
